fixed-spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
 }
 
 .panel-container {
@@ -20,7 +20,7 @@
     flex-direction: column;
   }
 
-  .panel{
+  .panel {
     min-height: 100vh;
   }
 
